tests/NormalTests/paczka1/fuzzy1/20156184.err
Error in line 5: A874 S310 48,3
Error in line 3: xxrwxTWUp1 S806 89,3
Error in line 27: A874 S310 41,9
Error in line 25: aTQPGRJvS S704 0,1
Error in line 33: A874 S704 83,6
Error in line 26: xxrwxTWUp1 A874 121,1
